# apex-optimizer

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  rust.yml
src/: main.rs  win_elevated.rs
src/apex/: backup.rs  mod.rs  optim_level.rs  prompt.rs
src/apex/autoexec/: audio.rs  gameplay.rs  graphics.rs  misc.rs  mod.rs  network.rs  privacy.rs
src/apex/videoconfig/: algs.rs  default.rs  mod.rs  performance.rs  safe.rs
src/fragments/: autoexec.rs  mod.rs  videoconfig.rs
src/registry/: fix_dvr.rs  gaming_tweaks.rs  mod.rs  mousefix.rs  tcp_tweaks.rs  timer_tweaks.rs
src/ui/: cli.rs  gui.rs
