[package]
name = "apex-optimizer"
description = "Program to apply fixes and configurations to help optimize Apex Legends on PC."
version = "0.1.0"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2018"

[[bin]]
name = "apex-optimizer"

[dependencies]
glutin = "0.24"
dialoguer = "0.5"
winreg = { version = "0.7", features = ["transactions"] }
log = { version = "0.4", features = ["max_level_debug"] }
pretty_env_logger = "0.4"
clap = "2.33"
dirs = "2.0"
chrono = "0.4"
zip = "0.5.5"

[dependencies.winapi]
version = "0.3"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]

[build-dependencies]
chrono = "0.4"
