[package]
name = "apex-optimizer"
description = "Program to apply fixes and configurations to help optimize Apex Legends on PC."
version = "0.2.0"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2018"

[[bin]]
name = "apex-optimizer"
path = "src/main.rs"

[dependencies]
glutin = "0.24"
dialoguer = "0.5"
winreg = { version = "0.7", features = ["transactions"] }
log = { version = "0.4", features = ["max_level_debug"] }
pretty_env_logger = "0.4"
clap = "2.33"
dirs = "3.0"
chrono = "0.4"
zip = "0.5"
reqwest = { version = "0.10", features = ["blocking"] }
tempfile = "3.1"
druid = "0.6"

[dependencies.winapi]
version = "0.3"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]

[build-dependencies]
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
